# experimental-argo-cd

./: .gitignore  README.md  main.py  pyproject.toml
.circleci/: config.yml
.github/workflows/: ci.yaml
commands/: commands.txt
deploy/: Dockerfile
kubernetes/prd/: deployment.yaml
