[tool.poetry]
name = "experimental-argo-cd"
version = "0.1.0"
description = ""
authors = ["Matheus Henrique Costa <37151367+matheushenrique98@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
